Fix general chat

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="App by @jtscodes"
+      content="Clique is a full-stack messaging application that utilizes user widgets to visualize the chat space.  Built with love by @jtscodes."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>App by @jtscodes</title>
+    <title>Clique</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
